chore: html id 적절한 이름으로 변경

--- a/01-move-animation/index.html
+++ b/01-move-animation/index.html
@@ -10,7 +10,7 @@
       <button id="upArrowBtn" value="ArrowUp">↑</button>
       <button id="rightArrowBtn" value="ArrowRight">→</button>
     </div>
-    <div id="canvas-body">
+    <div id="canvas-wrapper">
       <canvas></canvas>
     </div>
 
