--- a/02-focus-map/index.html
+++ b/02-focus-map/index.html
@@ -10,7 +10,7 @@
       <button id="upArrowBtn" value="ArrowUp">↑</button>
       <button id="rightArrowBtn" value="ArrowRight">→</button>
     </div>
-    <div id="canvas-body">
+    <div id="canvas-wrapper">
       <canvas></canvas>
     </div>
 
