--- a/02-focus-map/index.html
+++ b/02-focus-map/index.html
@@ -9,6 +9,8 @@
       <button id="downArrowBtn" value="ArrowDown">↓</button>
       <button id="upArrowBtn" value="ArrowUp">↑</button>
       <button id="rightArrowBtn" value="ArrowRight">→</button>
+      <button id="gameStartBtn">시작</button>
+      <button id="gameStopBtn">중지</button>
     </div>
     <div id="canvas-wrapper">
       <canvas></canvas>
