--- a/06-black-maze-game/index.html
+++ b/06-black-maze-game/index.html
@@ -12,9 +12,14 @@
       <button id="gameStartBtn">시작</button>
       <button id="gameResetBtn">초기화</button>
     </div>
+
     <div id="canvas-wrapper">
       <canvas></canvas>
     </div>
+
+    <!-- load 되기 전 이미지 전부 불러오기 위함 -->
+    <img id="tinyMale01" src="./M_01.png"/>
+    <img id="tiles" src="./tiles.png"/>
 
     <script type="module" src="./main.js"></script>
   </body>
