refactor: image preload

--- a/04-move-direction/index.html
+++ b/04-move-direction/index.html
@@ -12,9 +12,13 @@
       <button id="gameStartBtn">시작</button>
       <button id="gameStopBtn">중지</button>
     </div>
+
     <div id="canvas-wrapper">
       <canvas></canvas>
     </div>
+
+    <img id="tinyMale01" src="./M_01.png"/>
+    <img id="tiles" src="./tiles.png"/>
 
     <script type="module" src="./main.js"></script>
   </body>
